// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package users;

option go_package = "github.com/badu/microservices-demo/app/users;users";

message User {
  google.protobuf.Timestamp     CreatedAt   = 7;
  google.protobuf.Timestamp     UpdatedAt   = 8;
  string                        UserID      = 1;
  string                        FirstName   = 2;
  string                        LastName    = 3;
  string                        Email       = 4;
  string                        Avatar      = 5;
  string                        Role        = 6;
}

message GetByIDResponse {
  User                          User        = 1;
}

message GetByIDRequest {
  string                        UserID      = 1;
}


message GetUsersByIDsResponse {
  repeated User                 Users       = 1;
}

message GetUsersByIDsRequest {
  repeated string               UsersIDs    = 1;
}

service UserService {
  rpc GetUserByID(GetByIDRequest) returns (GetByIDResponse) {}
  rpc GetUsersByIDs(GetUsersByIDsRequest) returns (GetUsersByIDsResponse) {}
}
